--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "classnames": "^2.2.6",
     "react": "^16.14.0",
-    "react-content-loader": "^5.1.2",
+    "react-content-loader": "^5.1.3",
     "react-dom": "^16.14.0",
     "react-infinite-scroll-component": "^5.1.0",
     "react-redux": "^7.2.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "^3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
